--- a/web.html
+++ b/web.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    homepage aboutMe contact info
+  </body>
 </html>
