--- a/web.html
+++ b/web.html
@@ -3,9 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio</title>
   </head>
   <body>
-    homepage aboutMe contact info
+    <section id="homepage">
+      <h1>Homepage</h1>
+      <p>content shall go here</p>
+    </section>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>
+        Hi there! I'm Alfredo, a curious individual with a deep passion for life
+        and a hunger for learning new things. I believe that challenges are an
+        inherent part of life, and it's through these challenges that we grow
+        and evolve.
+      </p>
+
+      <p>
+        One of my great loves is music, which I find to be a powerful source of
+        inspiration. In the world of programming, I've discovered a fascinating
+        creative outlet that allows me to turn ideas into functional solutions.
+      </p>
+
+      <p>
+        Beyond the world of coding, you can often find me on long runs, as I'm
+        an avid runner. I'm currently training for a marathon, and my ultimate
+        goal is to tackle ultramarathons in the future. The endurance and
+        discipline required in running parallel my approach to problem-solving
+        in programming.
+      </p>
+
+      <p>
+        When I'm not immersed in code or pounding the pavement, I enjoy spending
+        quality time with my furry companion. My dog and I love exploring the
+        outdoors, meeting new people, and discovering new places.
+      </p>
+
+      <p>
+        Recently, I've delved into the world of Linux, and I'm absolutely
+        captivated by its potential for customization and optimization.
+        Exploring the depths of this operating system has become a new adventure
+        for me.
+      </p>
+
+      <p>
+        I'm excited to continue this journey of learning, creating, and pushing
+        boundaries, both in the world of programming and in life itself.
+      </p>
+    </section>
+    <section id="contactInfo">
+      <h2>Contact Info</h2>
+      <p>Email</p>
+      <p>Phone</p>
+      <!--might add github and linkind for this part too ima look at other examples tho-->
+    </section>
   </body>
 </html>
