workig on contact info

--- a/web.html
+++ b/web.html
@@ -51,11 +51,28 @@
         boundaries, both in the world of programming and in life itself.
       </p>
     </section>
-    <section id="contactInfo">
-      <h2>Contact Info</h2>
-      <p>Email</p>
-      <p>Phone</p>
-      <!--might add github and linkind for this part too ima look at other examples tho-->
+    <section id="Socials">
+      <h2>Social Links</h2>
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/freddiexworld/">
+            <img src="" alt="Instagram" />
+          </a>
+        </li>
+        <li>Linkedin</li>
+        <li>
+          <a
+            href="https://github.com/freddxworld?tab=overview&from=2023-10-01&to=2023-10-30"
+          >
+            <img src="" alt="GitHub" />
+          </a>
+        </li>
+        <li>
+          <a href="mailto:alfredoarmaz999@gmail.com">
+            <img src="" alt="Email" />
+          </a>
+        </li>
+      </ul>
     </section>
   </body>
 </html>
