so i created new folders and moved some files around also im still working on the social links but i so far have the instagram about done but yah

--- a/web.html
+++ b/web.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
     <section id="homepage">
@@ -56,10 +57,18 @@
       <ul>
         <li>
           <a href="https://www.instagram.com/freddiexworld/">
-            <img src="" alt="Instagram" />
+            <img
+              src="assets/icons/Instagram Logo.png"
+              alt="Instagram"
+              class="img-small"
+            />
           </a>
         </li>
-        <li>Linkedin</li>
+        <li>
+          <a href="https://www.linkedin.com/feed/">
+            <img src="" alt="Linkedin" />
+          </a>
+        </li>
         <li>
           <a
             href="https://github.com/freddxworld?tab=overview&from=2023-10-01&to=2023-10-30"
@@ -68,7 +77,7 @@
           </a>
         </li>
         <li>
-          <a href="mailto:alfredoarmaz999@gmail.com">
+          <a href="mailto:alfredoarmaz999@gmail.com" target="_blank">
             <img src="" alt="Email" />
           </a>
         </li>
