so it works the link for the email but the website arc keeps stealiing it

--- a/web.html
+++ b/web.html
@@ -77,7 +77,7 @@
           </a>
         </li>
         <li>
-          <a href="mailto:alfredoarmaz999@gmail.com" target="_blank">
+          <a href="mailto:alfredoarmaz999@gmail.com">
             <img src="" alt="Email" />
           </a>
         </li>
