added logos and links fo all socials and changed the sizes for each one i also added some edits to the css file

--- a/web.html
+++ b/web.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/style.css" />
   </head>
   <body>
     <section id="homepage">
@@ -66,19 +66,31 @@
         </li>
         <li>
           <a href="https://www.linkedin.com/feed/">
-            <img src="" alt="Linkedin" />
+            <img
+              src="assets/icons/Linkedin Logo.png"
+              alt="Linkedin"
+              class="img-small"
+            />
           </a>
         </li>
         <li>
           <a
             href="https://github.com/freddxworld?tab=overview&from=2023-10-01&to=2023-10-30"
           >
-            <img src="" alt="GitHub" />
+            <img
+              src="assets/icons/Github Logo (2)..png"
+              alt="GitHub"
+              class="img-small"
+            />
           </a>
         </li>
         <li>
           <a href="mailto:alfredoarmaz999@gmail.com">
-            <img src="" alt="Email" />
+            <img
+              src="assets/icons/Email Envelope Logo (1)..png"
+              alt="Email"
+              class="img-small"
+            />
           </a>
         </li>
       </ul>
