added more css style to the website and just removed some uneccary stuff

--- a/web.html
+++ b/web.html
@@ -7,93 +7,108 @@
     <link rel="stylesheet" type="text/css" href="assets/style.css" />
   </head>
   <body>
-    <section id="homepage">
-      <h1>Homepage</h1>
-      <p>content shall go here</p>
-    </section>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>
-        Hi there! I'm Alfredo, a curious individual with a deep passion for life
-        and a hunger for learning new things. I believe that challenges are an
-        inherent part of life, and it's through these challenges that we grow
-        and evolve.
-      </p>
+    <div class="container">
+      <!--
+        add dark mode, add pic of your hobbies make this website your own, what
+        if we made each its own seprate page
+      -->
+      <section id="about">
+        <h2>About Me</h2>
+        <p>
+          Hi there! I'm Alfredo, a curious individual with a deep passion for
+          life and a hunger for learning new things. I believe that challenges
+          are an inherent part of life, and it's through these challenges that
+          we grow and evolve.
+        </p>
 
-      <p>
-        One of my great loves is music, which I find to be a powerful source of
-        inspiration. In the world of programming, I've discovered a fascinating
-        creative outlet that allows me to turn ideas into functional solutions.
-      </p>
+        <p>
+          One of my great loves is music, which I find to be a powerful source
+          of inspiration. In the world of programming, I've discovered a
+          fascinating creative outlet that allows me to turn ideas into
+          functional solutions.
+        </p>
 
-      <p>
-        Beyond the world of coding, you can often find me on long runs, as I'm
-        an avid runner. I'm currently training for a marathon, and my ultimate
-        goal is to tackle ultramarathons in the future. The endurance and
-        discipline required in running parallel my approach to problem-solving
-        in programming.
-      </p>
+        <p>
+          Beyond the world of coding, you can often find me on long runs, as I'm
+          an avid runner. I'm currently training for a marathon, and my ultimate
+          goal is to tackle ultramarathons in the future. The endurance and
+          discipline required in running parallel my approach to problem-solving
+          in programming.
+        </p>
 
-      <p>
-        When I'm not immersed in code or pounding the pavement, I enjoy spending
-        quality time with my furry companion. My dog and I love exploring the
-        outdoors, meeting new people, and discovering new places.
-      </p>
+        <p>
+          When I'm not immersed in code or pounding the pavement, I enjoy
+          spending quality time with my furry companion. My dog and I love
+          exploring the outdoors, meeting new people, and discovering new
+          places.
+        </p>
 
-      <p>
-        Recently, I've delved into the world of Linux, and I'm absolutely
-        captivated by its potential for customization and optimization.
-        Exploring the depths of this operating system has become a new adventure
-        for me.
-      </p>
+        <p>
+          Recently, I've delved into the world of Linux, and I'm absolutely
+          captivated by its potential for customization and optimization.
+          Exploring the depths of this operating system has become a new
+          adventure for me.
+        </p>
 
-      <p>
-        I'm excited to continue this journey of learning, creating, and pushing
-        boundaries, both in the world of programming and in life itself.
-      </p>
-    </section>
-    <section id="Socials">
-      <h2>Social Links</h2>
-      <ul>
-        <li>
-          <a href="https://www.instagram.com/freddiexworld/">
-            <img
-              src="assets/icons/Instagram Logo.png"
-              alt="Instagram"
-              class="img-small"
-            />
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/feed/">
-            <img
-              src="assets/icons/Linkedin Logo.png"
-              alt="Linkedin"
-              class="img-small"
-            />
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://github.com/freddxworld?tab=overview&from=2023-10-01&to=2023-10-30"
-          >
-            <img
-              src="assets/icons/Github Logo (2)..png"
-              alt="GitHub"
-              class="img-small"
-            />
-          </a>
-        </li>
-        <li>
-          <a href="mailto:alfredoarmaz999@gmail.com">
-            <img
-              src="assets/icons/Email Envelope Logo (1)..png"
-              alt="Email"
-              class="img-small"
-            />
-          </a>
-        </li>
-      </ul>
-    </section>
+        <p>
+          I'm excited to continue this journey of learning, creating, and
+          pushing boundaries, both in the world of programming and in life
+          itself.
+        </p>
+      </section>
+      <section id="Portfolio">
+        <h2>Portfolio</h2>
+      </section>
+      <section id="skills">
+        <h2>Programming Skills</h2>
+        <p>
+          anything you have learned through programming so liek git, or
+          langauges or evne tech
+        </p>
+      </section>
+      <section id="Socials">
+        <h2>Social Links</h2>
+        <ul>
+          <li>
+            <a href="https://www.instagram.com/freddiexworld/">
+              <img
+                src="assets/icons/Instagram Logo.png"
+                alt="Instagram"
+                class="img-small"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/feed/">
+              <img
+                src="assets/icons/Linkedin Logo.png"
+                alt="Linkedin"
+                class="img-small"
+              />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://github.com/freddxworld?tab=overview&from=2023-10-01&to=2023-10-30"
+            >
+              <img
+                src="assets/icons/Github Logo (2)..png"
+                alt="GitHub"
+                class="img-small"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="mailto:alfredoarmaz999@gmail.com">
+              <img
+                src="assets/icons/Email Envelope Logo (1)..png"
+                alt="Email"
+                class="img-small"
+              />
+            </a>
+          </li>
+        </ul>
+      </section>
+    </div>
   </body>
 </html>
