--- a/web.html
+++ b/web.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,9 +6,10 @@
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="assets/style.css" />
   </head>
+
   <body>
     <!--so this is where the header will go with the links this willbe used for rn-->
-    <header class="hover-effect">
+<!--     <header class="hover-effect">
       <nav>
         <ul>
           <li><a href="Dev-Vault.html">About Me</a></li>
@@ -16,7 +17,9 @@
           <li><a href="skills.html">Skills</a></li>
         </ul>
       </nav>
-    </header>
+    </header> -->
+    <h1>Alfredo Armaz</h1>
+    <h2>Frontend Engineer</h2>
     <main class="about-me">
       <h2 class="about-me-h2">About Me</h2>
       <p>
