fixed alot of stuff i removed some stuff and added new pngs and stuff

--- a/main.html
+++ b/main.html
@@ -11,12 +11,19 @@
     <div class="container">
       <div class="info">
         <h1>Alfredo Armaz</h1>
-        <h3>Frontend Engineer</h3>
+        <h3>Junior Frontend Engineer</h3>
+        <p>Passionate junior frontend developer with a thirst for coding, music, and Linux exploration.</p>
         <ul class="tableContents">
           <li class="tableList">ABOUT</li>
           <li class="tableList">EXPERIENCE</li>
           <li class="tableList">PROJECTS</li>
         </ul>
+        <div class="logos">
+          <img class="logo" src="assets/icons/emailll.png" alt="emailicon" />
+          <img class="logo" src="assets/icons/Github Logo.png" alt="github">
+          <img class="logo" src="assets/icons/Linkedin Logo.png" alt="Linkedin">
+          <img class="logo" src="assets/icons/Instagram Logo.png" alt="insta">
+        </div>
       </div>
       <div class="body_info">
         <p>
@@ -46,7 +53,7 @@
           creating, and pushing boundaries, both in the world of programming and
           in life itself.
         </p>
-              </div>
+      </div>
     </div>
   </body>
 </html>
