almost finished with smaller width screen media query

--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
       <div class="info">
         <h1>Alfredo Armaz</h1>
         <h3>Junior Frontend Engineer</h3>
-        <p>Passionate junior frontend developer with a thirst for coding, music, and Linux exploration.</p>
+        <p class="bf">Passionate junior frontend developer with a thirst for coding, music, and Linux exploration.</p>
         <ul class="tableContents">
           <li class="tableList">ABOUT</li>
           <li class="tableList">EXPERIENCE</li>
@@ -26,6 +26,7 @@
         </div>
       </div>
       <div class="body_info">
+        <h3 class="tbHeaders">About</h3>
         <p>
           Hi there! I'm Alfredo, a curious individual with a deep passion for
           life and a hunger for learning new things. I believe that challenges
@@ -53,6 +54,8 @@
           creating, and pushing boundaries, both in the world of programming and
           in life itself.
         </p>
+        <h3 class="tbHeaders">Experience</h3>
+        <h3 class="tbHeaders">Projects</h3>
       </div>
     </div>
   </body>
