added button functionality

--- a/main.html
+++ b/main.html
@@ -12,17 +12,28 @@
       <div class="info">
         <h1>Alfredo Armaz</h1>
         <h3>Junior Frontend Engineer</h3>
-        <p class="bf">Passionate junior frontend developer with a thirst for coding, music, and Linux exploration.</p>
+        <p class="bf">
+          Passionate junior frontend developer with a thirst for coding, music,
+          and Linux exploration.
+        </p>
         <ul class="tableContents">
           <li class="tableList">ABOUT</li>
           <li class="tableList">EXPERIENCE</li>
           <li class="tableList">PROJECTS</li>
         </ul>
         <div class="logos">
-          <img class="logo" src="assets/icons/emailll.png" alt="emailicon" />
-          <img class="logo" src="assets/icons/Github Logo.png" alt="github">
-          <img class="logo" src="assets/icons/Linkedin Logo.png" alt="Linkedin">
-          <img class="logo" src="assets/icons/Instagram Logo.png" alt="insta">
+          <a href="">
+            <img class="logo" src="assets/icons/emailll.png" alt="emailicon" />
+          </a>
+          <a href="https://github.com/freddxworld">
+            <img class="logo" src="assets/icons/Github Logo.png" alt="github" />
+          </a>
+          <a href="https://www.linkedin.com/in/alfredo-armaz-09900b256/">
+            <img class="logo" src="assets/icons/Linkedin Logo.png" alt="Linkedin" />
+          </a>
+          <a href="https://www.instagram.com/freddiexworld/"> 
+            <img class="logo" src="assets/icons/Instagram Logo.png" alt="insta" />
+          </a>
         </div>
       </div>
       <div class="body_info">
@@ -54,8 +65,8 @@
           creating, and pushing boundaries, both in the world of programming and
           in life itself.
         </p>
-        <h3 class="tbHeaders">Experience</h3>
-        <h3 class="tbHeaders">Projects</h3>
+        <h3 class="tbHeaders">Skills</h3>
+        <h3 class="tbHeaders">Personal Projects</h3>
       </div>
     </div>
   </body>
