added fully functionality for the logos

--- a/main.html
+++ b/main.html
@@ -22,16 +22,16 @@
           <li class="tableList">PROJECTS</li>
         </ul>
         <div class="logos">
-          <a href="">
+          <a href="mailto:alfredoarmaz999@protonmail.com" target="_blank">
             <img class="logo" src="assets/icons/emailll.png" alt="emailicon" />
           </a>
-          <a href="https://github.com/freddxworld">
+          <a href="https://github.com/freddxworld" target="_blank">
             <img class="logo" src="assets/icons/Github Logo.png" alt="github" />
           </a>
-          <a href="https://www.linkedin.com/in/alfredo-armaz-09900b256/">
+          <a href="https://www.linkedin.com/in/alfredo-armaz-09900b256/" target="_blank">
             <img class="logo" src="assets/icons/Linkedin Logo.png" alt="Linkedin" />
           </a>
-          <a href="https://www.instagram.com/freddiexworld/"> 
+          <a href="https://www.instagram.com/freddiexworld/" target="_blank"> 
             <img class="logo" src="assets/icons/Instagram Logo.png" alt="insta" />
           </a>
         </div>
