fixing layout damn bro... im struggling

--- a/main.html
+++ b/main.html
@@ -28,11 +28,22 @@
           <a href="https://github.com/freddxworld" target="_blank">
             <img class="logo" src="assets/icons/Github Logo.png" alt="github" />
           </a>
-          <a href="https://www.linkedin.com/in/alfredo-armaz-09900b256/" target="_blank">
-            <img class="logo" src="assets/icons/Linkedin Logo.png" alt="Linkedin" />
+          <a
+            href="https://www.linkedin.com/in/alfredo-armaz-09900b256/"
+            target="_blank"
+          >
+            <img
+              class="logo"
+              src="assets/icons/Linkedin Logo.png"
+              alt="Linkedin"
+            />
           </a>
-          <a href="https://www.instagram.com/freddiexworld/" target="_blank"> 
-            <img class="logo" src="assets/icons/Instagram Logo.png" alt="insta" />
+          <a href="https://www.instagram.com/freddiexworld/" target="_blank">
+            <img
+              class="logo"
+              src="assets/icons/Instagram Logo.png"
+              alt="insta"
+            />
           </a>
         </div>
       </div>
@@ -65,8 +76,62 @@
           creating, and pushing boundaries, both in the world of programming and
           in life itself.
         </p>
-        <h3 class="tbHeaders">Skills</h3>
+        <div>
+          <h3 class="tbHeaders">Skills</h3>
+          <h5>Technical Skills</h5>
+          <ul>
+            <li>
+              Programming Languages: Python, Java, SQL, JavaScript, HTML, CSS
+            </li>
+            <li>Frameworks: React</li>
+            <li>Tools: Git, CMD</li>
+            <li>
+              Operating Systems: Windows, MacOS, Linux(Ubuntu, Arch, Mint)
+            </li>
+            <li>Integrated Devolopment Environments: Vscode, Nvim</li>
+            <li>Package Managers: npm, pip</li>
+          </ul>
+          <h5>Soft Skills</h5>
+          <li>
+            <strong>Strong Communication:</strong> Clear and effective in both
+            written and verbal communication.
+          </li>
+          <li>
+            <strong>Detail-Oriented:</strong> Attentive to detail, ensuring
+            high-quality outcomes.
+          </li>
+          <li>
+            <strong>Adaptability:</strong> Quick to learn new technologies and
+            adapt to different environments.
+          </li>
+          <li>
+            <strong>Team Collaboration:</strong> Works well in team settings,
+            contributing to group goals.
+          </li>
+          <li>
+            <strong>Time Management:</strong> Efficiently manages time to meet
+            deadlines and handle multiple tasks.
+          </li>
+        </div>
         <h3 class="tbHeaders">Personal Projects</h3>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
+        <p>hello</p>
       </div>
     </div>
   </body>
