--- a/main.html
+++ b/main.html
@@ -1,119 +1,169 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="assets/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Me</title>
-  <link rel="stylesheet" type="text/css" href="assets/style.css" />
-</head>
-
-<body>
-  <div class="container">
-    <div class="info">
-      <h1>Alfredo Armaz</h1>
-      <h3>Junior Frontend Engineer</h3>
-      <p class="bf">
-        Passionate junior frontend developer with a thirst for coding, music,
-        and Linux exploration.
-      </p>
-      <ul class="tableContents">
-        <li class="tableList">ABOUT</li>
-        <li class="tableList">SKILLS</li>
-        <li class="tableList">PROJECTS</li>
-      </ul>
-      <div class="logos">
-        <a href="mailto:alfredoarmaz999@protonmail.com" target="_blank">
-          <img class="logo" src="assets/icons/emailll.png" alt="emailicon" />
-        </a>
-        <a href="https://github.com/freddxworld" target="_blank">
-          <img class="logo" src="assets/icons/Github Logo.png" alt="github" />
-        </a>
-        <a href="https://www.linkedin.com/in/alfredo-armaz-09900b256/" target="_blank">
-          <img class="logo" src="assets/icons/Linkedin Logo.png" alt="Linkedin" />
-        </a>
-        <a href="https://www.instagram.com/freddiexworld/" target="_blank">
-          <img class="logo" src="assets/icons/Instagram Logo.png" alt="insta" />
-        </a>
+  <body>
+    <div class="container">
+      <div class="info">
+        <h1>Alfredo Armaz</h1>
+        <h3>Junior Frontend Engineer</h3>
+        <p class="bf">
+          Passionate junior frontend developer with a thirst for coding, music,
+          and Linux exploration.
+        </p>
+        <!-- testing stuff here -->
+        <ul class="tableContents">
+          <li class="tableList" data-target="about">ABOUT</li>
+          <li class="tableList" data-target="skills">SKILLS</li>
+          <li class="tableList" data-target="projects">PROJECTS</li>
+        </ul>
+        <div class="logos">
+          <a href="mailto:alfredoarmaz999@protonmail.com" target="_blank">
+            <img class="logo" src="assets/icons/emailll.png" alt="emailicon" />
+          </a>
+          <a href="https://github.com/freddxworld" target="_blank">
+            <img class="logo" src="assets/icons/Github Logo.png" alt="github" />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/alfredo-armaz-09900b256/"
+            target="_blank"
+          >
+            <img
+              class="logo"
+              src="assets/icons/Linkedin Logo.png"
+              alt="Linkedin"
+            />
+          </a>
+          <a href="https://www.instagram.com/freddiexworld/" target="_blank">
+            <img
+              class="logo"
+              src="assets/icons/Instagram Logo.png"
+              alt="insta"
+            />
+          </a>
+        </div>
+      </div>
+      <div class="body_info">
+        <div id="about" class="about">
+          <h3 class="tbHeaders">About</h3>
+          <p>
+            Hi there! I'm Alfredo, a curious individual with a deep passion for
+            life and a hunger for learning new things. I believe that challenges
+            are an inherent part of life, and it's through these challenges that
+            we grow and evolve. One of my great loves is music, which I find to
+            be a powerful source of inspiration. In the world of programming,
+            I've discovered a fascinating creative outlet that allows me to turn
+            ideas into functional solutions.
+          </p>
+          <p>
+            Beyond the world of coding, you can often find me on long runs, as
+            I'm an avid runner. I'm currently training for a marathon, and my
+            ultimate goal is to tackle ultramarathons in the future. The
+            endurance and discipline required in running parallel my approach to
+            problem-solving in programming. When I'm not immersed in code or
+            pounding the pavement, I enjoy spending quality time with my furry
+            companion. My dog and I love exploring the outdoors, meeting new
+            people, and discovering new places.
+          </p>
+          <p>
+            Recently, I've delved into the world of Linux, and I'm absolutely
+            captivated by its potential for customization and optimization.
+            Exploring the depths of this operating system has become a new
+            adventure for me. I'm excited to continue this journey of learning,
+            creating, and pushing boundaries, both in the world of programming
+            and in life itself.
+          </p>
+        </div>
+        <div class="skillList" id="skills">
+          <h3 class="tbHeaders">Skills</h3>
+          <h5>Technical Skills</h5>
+          <ul>
+            <li>
+              Programming Languages: Python, Java, SQL, JavaScript, HTML, CSS
+            </li>
+            <li>Frameworks: React</li>
+            <li>Tools: Git, CMD</li>
+            <li>
+              Operating Systems: Windows, MacOS, Linux(Ubuntu, Arch, Mint)
+            </li>
+            <li>Integrated Devolopment Environments: Vscode, Nvim</li>
+            <li>Package Managers: npm, pip</li>
+          </ul>
+          <h5>Soft Skills</h5>
+          <ul>
+            <li>
+              <strong>Strong Communication:</strong> Clear and effective in both
+              written and verbal communication.
+            </li>
+            <li>
+              <strong>Detail-Oriented:</strong> Attentive to detail, ensuring
+              high-quality outcomes.
+            </li>
+            <li>
+              <strong>Adaptability:</strong> Quick to learn new technologies and
+              adapt to different environments.
+            </li>
+            <li>
+              <strong>Team Collaboration:</strong> Works well in team settings,
+              contributing to group goals.
+            </li>
+            <li>
+              <strong>Time Management:</strong> Efficiently manages time to meet
+              deadlines and handle multiple tasks.
+            </li>
+          </ul>
+        </div>
+        <div class="personalProjects" id="projects">
+          <h3 class="tbHeaders">Personal Projects</h3>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+          <p>hello this me testing this out what what a wonderful day right</p>
+        </div>
       </div>
     </div>
-    <div class="body_info">
-      <div id="about">
-        <h3 class="tbHeaders">About</h3>
-        <p>
-          Hi there! I'm Alfredo, a curious individual with a deep passion for
-          life and a hunger for learning new things. I believe that challenges
-          are an inherent part of life, and it's through these challenges that
-          we grow and evolve. One of my great loves is music, which I find to
-          be a powerful source of inspiration. In the world of programming,
-          I've discovered a fascinating creative outlet that allows me to turn
-          ideas into functional solutions.
-        </p>
-        <p>
-          Beyond the world of coding, you can often find me on long runs, as
-          I'm an avid runner. I'm currently training for a marathon, and my
-          ultimate goal is to tackle ultramarathons in the future. The
-          endurance and discipline required in running parallel my approach to
-          problem-solving in programming. When I'm not immersed in code or
-          pounding the pavement, I enjoy spending quality time with my furry
-          companion. My dog and I love exploring the outdoors, meeting new
-          people, and discovering new places.
-        </p>
-        <p>
-          Recently, I've delved into the world of Linux, and I'm absolutely
-          captivated by its potential for customization and optimization.
-          Exploring the depths of this operating system has become a new
-          adventure for me. I'm excited to continue this journey of learning,
-          creating, and pushing boundaries, both in the world of programming
-          and in life itself.
-        </p>
-      </div>
-      <div class="skillList" id="skills">
-        <h3 class="tbHeaders">Skills</h3>
-        <h5>Technical Skills</h5>
-        <ul>
-          <li>
-            Programming Languages: Python, Java, SQL, JavaScript, HTML, CSS
-          </li>
-          <li>Frameworks: React</li>
-          <li>Tools: Git, CMD</li>
-          <li>
-            Operating Systems: Windows, MacOS, Linux(Ubuntu, Arch, Mint)
-          </li>
-          <li>Integrated Devolopment Environments: Vscode, Nvim</li>
-          <li>Package Managers: npm, pip</li>
-        </ul>
-        <h5>Soft Skills</h5>
-        <ul>
-          <li>
-            <strong>Strong Communication:</strong> Clear and effective in both
-            written and verbal communication.
-          </li>
-          <li>
-            <strong>Detail-Oriented:</strong> Attentive to detail, ensuring
-            high-quality outcomes.
-          </li>
-          <li>
-            <strong>Adaptability:</strong> Quick to learn new technologies and
-            adapt to different environments.
-          </li>
-          <li>
-            <strong>Team Collaboration:</strong> Works well in team settings,
-            contributing to group goals.
-          </li>
-          <li>
-            <strong>Time Management:</strong> Efficiently manages time to meet
-            deadlines and handle multiple tasks.
-          </li>
-        </ul>
-      </div>
-      <div class="personalProjects" id="projects">
-        <h3 class="tbHeaders">Personal Projects</h3>
-        <p>hello this me testing this out what what a wonderful day right</p>
-      </div>
-    </div>
-  </div>
-  <script src="assets/script.js"></script>
-</body>
-
+    <script src="assets/script.js"></script>
+  </body>
 </html>
