--- a/index.html
+++ b/index.html
@@ -120,47 +120,23 @@
         </div>
         <div class="personalProjects" id="projects">
           <h3 class="tbHeaders">Personal Projects</h3>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
-          <p>hello this me testing this out what what a wonderful day right</p>
+          <!-- project -->
+          <div class="projectSquare">
+            <p class="timeline">timeline</p>
+            <div class="projectinfo">
+              <h5 class="ptitle">Valentine's Day Website</h5>
+              <p>
+                testing is this yahhhh hhhh test hello this is me testing this
+                we need teext in order to teset this test yep hhh hhhhhhhhhh
+                testing wow this is crazy wo this is amaazin you so funny heheh
+                eheheh
+              </p>
+              <div class="ptools">
+                <div class="circleTool">Git</div>
+                <div class="circleTool">HTML</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
