finish with the customization gonna start with adding the rest of the info

--- a/index.html
+++ b/index.html
@@ -137,6 +137,22 @@
               </div>
             </div>
           </div>
+          <div class="projectSquare">
+            <p class="timeline">timeline</p>
+            <div class="projectinfo">
+              <h5 class="ptitle">testing</h5>
+              <p>
+                testing is this yahhhh hhhh test hello this is me testing this
+                we need teext in order to teset this test yep hhh hhhhhhhhhh
+                testing wow this is crazy wo this is amaazin you so funny heheh
+                eheheh
+              </p>
+              <div class="ptools">
+                <div class="circleTool">Git</div>
+                <div class="circleTool">HTML</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
