--- a/index.html
+++ b/index.html
@@ -111,11 +111,59 @@
       <div class="personalProjects" id="projects">
         <h3 class="tbHeaders">Personal Projects</h3>
         <!-- project -->
-        <div class="projectSquare">
+        <div class="projectSquare" onclick="
+            window.open('https://freddxworld.github.io/Programming-Portfolio/', '_blank'
+            )">
+          <p class="timeline">May 2024</p>
+          <div class="projectinfo">
+            <h5 class="ptitle">Programming Portfolio</h5>
+            <p class="pbodyinfo">
+              Developed a personal portfolio using vanilla JavaScript, HTML, and CSS. Responsive layout for phone and
+              tablet, featuring an "About" section, "Skills" section, and project showcases. Includes an interactive
+              table of contents and is deployed on GitHub Pages. Design inspired by Brittany Chiang.
+            </p>
+            <div class="ptools">
+              <div class="circleTool">Git</div>
+              <div class="circleTool">GitHub</div>
+              <div class="circleTool">CSS</div>
+              <div class="circleTool">Nvim</div>
+              <div class="circleTool">HTML</div>
+              <div class="circleTool">Terminal</div>
+              <div class="circleTool">GitPages</div>
+            </div>
+          </div>
+        </div>
+        <div class="projectSquare" onclick="
+            window.open('https://freddxworld.github.io/ZenFlow/', '_blank'
+            )">
+          <p class="timeline">April 2024</p>
+          <div class="projectinfo">
+            <h5 class="ptitle">ZenFlow - PomodoroTimer</h5>
+            <p class="pbodyinfo">
+              Developed a browser-based Pomodoro timer with HTML, CSS, and
+              JavaScript, featuring pause/resume based on tab activity.
+              Enhanced user experience with visual notifications and progress
+              indicators. Deployed on GitHub Pages; future updates planned for
+              improving tab-switching detection.
+            </p>
+            <div class="ptools">
+              <div class="circleTool">Git</div>
+              <div class="circleTool">GitHub</div>
+              <div class="circleTool">CSS</div>
+              <div class="circleTool">Nvim</div>
+              <div class="circleTool">HTML</div>
+              <div class="circleTool">Terminal</div>
+              <div class="circleTool">GitPages</div>
+            </div>
+          </div>
+        </div>
+        <div class="projectSquare" onclick="
+            window.open('https://freddxworld.github.io/ValentinesLetter/', '_blank'
+            )">
           <p class="timeline">February 2024</p>
           <div class="projectinfo">
             <h5 class="ptitle">Valentine's Day Website</h5>
-            <p>
+            <p class="pbodyinfo">
               Developed a dynamic, interactive website with HTML, CSS, and
               JavaScript. Implemented user interactions, conditional
               navigation, and YouTube video integration based on user choices.
@@ -133,26 +181,9 @@
             </div>
           </div>
         </div>
-        <div class="projectSquare">
-          <p class="timeline">timeline</p>
-          <div class="projectinfo">
-            <h5 class="ptitle">testing</h5>
-            <p>
-              testing is this yahhhh hhhh test hello this is me testing this
-              we need teext in order to teset this test yep hhh hhhhhhhhhh
-              testing wow this is crazy wo this is amaazin you so funny heheh
-              eheheh
-            </p>
-            <div class="ptools">
-              <div class="circleTool">Git</div>
-              <div class="circleTool">HTML</div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
-  </div>
-  <script src="assets/script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 
 </html>
