--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         Passionate junior frontend developer with a thirst for coding, music,
         and Linux exploration.
       </p>
-      <!-- testing stuff here -->
       <ul class="tableContents">
         <li class="tableList" data-target="about">ABOUT</li>
         <li class="tableList" data-target="skills">SKILLS</li>
@@ -71,7 +70,7 @@
       </div>
       <div class="skillList" id="skills">
         <h3 class="tbHeaders">Skills</h3>
-        <h5>Technical Skills</h5>
+        <h5 class="skillh">Technical Skills</h5>
         <ul>
           <li>
             Programming Languages: Python, Java, SQL, JavaScript, HTML, CSS
@@ -84,7 +83,7 @@
           <li>Integrated Devolopment Environments: Vscode, Nvim</li>
           <li>Package Managers: npm, pip</li>
         </ul>
-        <h5>Soft Skills</h5>
+        <h5 class="skillh">Soft Skills</h5>
         <ul>
           <li>
             <strong>Strong Communication:</strong> Clear and effective in both
